--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,7 +1,7 @@
 name: QA Tests
 
 on:
-  pull_request:
+  pull_request
 
 jobs: 
   cypress-run:
@@ -10,5 +10,3 @@ jobs:
         - uses: actions/checkout@v2
         - name: Install dependencies
             run: npm install
-        - name: Run Cypress tests
-            run: npm run cypress:run
