--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,12 +1,11 @@
 name: QA Tests
 
-on:
-  pull_request
+on: pull_request
 
-jobs: 
+jobs:
   cypress-run:
     runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Install dependencies
-            run: npm install
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        run: npm install
