--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -6,6 +6,19 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16.14.2"
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
+      - name: Install serve
+        run: npm install -g serve
+      - name: Build
+        run: npm run build
+      - name: Serve
+        run: serve -s build
+      - name: Echo app
+        run: apt-get install -y curl && curl http://localhost:5173
