--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,5 +22,5 @@ jobs:
         run: serve -s build > /dev/null 2>&1 &
       - name: Echo app
         run: |
-          apt-get update; apt-get install -y curl
+          sudo apt-get update; sudo apt-get install -y curl
           curl http://localhost:3000
