--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build
+          retention-days: 1
 
   cypress-tests:
     runs-on: ubuntu-latest
