--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -23,6 +23,7 @@ jobs:
         with:
           name: build
           retention-days: 1
+          path: builds/${{ github.event.pull_request.head.sha }}/build
 
   cypress-tests:
     runs-on: ubuntu-latest
