--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build
+          name: ${{ github.event.pull_request.head.sha }}
           retention-days: 1
-          path: builds/${{ github.event.pull_request.head.sha }}/build
+          path: builds/${{ github.event.pull_request.head.sha }}
 
   cypress-tests:
     runs-on: ubuntu-latest
@@ -33,7 +33,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: build
-          path: builds/${{ github.event.pull_request.head.sha }}/build
+          path: builds/${{ github.event.pull_request.head.sha }}
       - name: Serve
         run: serve -s build > /dev/null 2>&1 &
       - name: Echo app
