--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: build
+          name: ${{ github.event.pull_request.head.sha }}
           path: builds/${{ github.event.pull_request.head.sha }}
       - name: Serve
         run: serve -s build > /dev/null 2>&1 &
