--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -14,8 +14,6 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
-      - name: Install serve
-        run: npm install -g serve
       - name: Build
         run: npm run build
       - name: Upload artifacts
@@ -23,12 +21,14 @@ jobs:
         with:
           name: ${{ github.event.pull_request.head.sha }}
           retention-days: 1
-          path: builds/${{ github.event.pull_request.head.sha }}
+          path: build
 
   cypress-tests:
     runs-on: ubuntu-latest
     needs: setup-build
     steps:
+      - name: Install serve
+        run: npm install -g serve
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
