--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           name: ${{ github.event.pull_request.head.sha }}
           retention-days: 1
-          path: build
+          path: dist
 
   cypress-tests:
     runs-on: ubuntu-latest
