--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -33,7 +33,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ${{ github.event.pull_request.head.sha }}
-          path: builds/${{ github.event.pull_request.head.sha }}
+          path: dist
       - name: Serve
         run: serve -s dist > /dev/null 2>&1 &
       - name: Echo app
