--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,6 +26,9 @@ jobs:
   cypress-tests:
     runs-on: ubuntu-latest
     needs: setup-build
+    strategy:
+      matrix:
+        suites: ["1-getting-started", "2-advanced-examples"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -45,4 +48,4 @@ jobs:
       - name: Install cypress
         run: npm install --save-dev cypress
       - name: Run cypress tests
-        run: npx cypress run --config baseUrl=http://localhost:3000 --spec "cypress/e2e/1-getting-started"
+        run: npx cypress run --config baseUrl=http://localhost:3000 --spec 'cypress/e2e/${{ matrix.suites }}'
