asdasda# Please enter the commit message for your changes. Lines starting

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -32,7 +32,7 @@ jobs:
     needs: setup-build
     strategy:
       matrix:
-        suites: [${{ needs.setup-build.outputs.suites }}]
+        suites: ${{ needs.setup-build.outputs.suites }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
