--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -32,7 +32,7 @@ jobs:
     needs: setup-build
     steps:
       - name: Print suites
-        run: echo ${{ needs }}
+        run: echo ${{ needs.setup-build }}
 
   cypress-tests:
     runs-on: ubuntu-latest
