--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -54,3 +54,12 @@ jobs:
         run: npm install --save-dev cypress
       - name: Run cypress tests
         run: npx cypress run --config baseUrl=http://localhost:3000 --spec 'cypress/e2e/${{ matrix.suites }}'
+
+  cleanup:
+    runs-on: ubuntu-latest
+    needs: cypress-tests
+    steps:
+      - name: Delete artifacts
+        uses: geekyeggo/delete-artifact@v5
+        with:
+          name: ${{ github.event.pull_request.head.sha }}
