--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -5,8 +5,6 @@ on: pull_request
 jobs:
   setup-build:
     runs-on: ubuntu-latest
-    outputs:
-      suites: ${{ steps.suites.outputs.suites }}
     steps:
       - name: Setup node
         uses: actions/setup-node@v2
@@ -30,6 +28,8 @@ jobs:
 
   checkout-tests-repo:
     runs-on: ubuntu-latest
+    outputs:
+      suites: ${{ steps.suites.outputs.suites }}
     steps:
       - name: Checkout tests repo
         id: checkout_tests_branch
@@ -69,7 +69,7 @@ jobs:
     needs: [setup-build, checkout-tests-repo]
     strategy:
       matrix:
-        suites: ${{ fromJson(needs.setup-build.outputs.suites) }}
+        suites: ${{ fromJson(needs.checkout-tests-repo.outputs.suites) }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
