[ CHORE ] Renames artifact in deletion

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -97,7 +97,7 @@ jobs:
       - name: Delete dist artifact
         uses: geekyeggo/delete-artifact@v5
         with:
-          name: ${{ github.event.pull_request.head.sha }}-dist
+          name: ${{ github.event.pull_request.head.sha }}-build
       - name: Delete tests artifact
         uses: geekyeggo/delete-artifact@v5
         with:
